--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   },
   "homepage": "https://github.com/pixxstudios/natours#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/node": "^14.14.35",
     "nodemon": "^2.0.7"
   }
 }
