--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/pixxstudios/natours#readme",
   "dependencies": {
+    "@types/morgan": "^1.9.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.35",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
 }
