--- a/config.env
+++ b/config.env
@@ -1,2 +1,4 @@
 NODE_ENV=development
 PORT=3000
+DATABASE=mongodb+srv://gagan:<PASSWORD>@cluster0.eibjm.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE_PASSWORD=x5zoaNvxhkVV0Bzp
