--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@types/morgan": "^1.9.2",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
